--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -58,13 +58,10 @@
 		    	</div>
 		    {% endfor %}
 		{% endif %}
-			
-		<div class="row">
-			<div class="col-md-12">
-				{% block content %}{% endblock %}
-			</div>
-		</div>
 	</div>
+
+	{% block content %}{% endblock %}
+
 	<footer>
         <div class="row">
           	<div class="col-xs-12 text-center">
@@ -75,5 +72,6 @@
 	
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/custom.js' %}"></script>
+	{% block extra_js %}{% endblock %}
 </body>
 </html>
