--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,54 +1,122 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static range %}
 {% block title %}
 	Maqr6 | Forget about cleaning, enjoy the result!
 {% endblock %}
 
 
-{% block content %}
-    
-      
-    <div class="row">
-    	<h3 class="text-center"> How It Works </h3>
-    	
+{% block content %}    
+    <section>
+        <div class="container">
+            <div class="row">
+          	    <h1 class="text-center">How It Works</h1>
 
-    	<div class="col-xs-12 col-sm-4">
-      		<p>Book a cleaning on our website</p>
-    	</div>
-    	<div class="col-xs-12 col-sm-4">
-      		<p>Our professional staff will do the work</p>
-    	</div>
-    	<div class="col-xs-12 col-sm-4">
-      		<p>Sit back and enjoy your fresh home.</p>
-    	</div>
-    </div>
-  	<div class="row">
-    	<h3 class="text-center">What Users Say</h3>
-    	{% for review in reviews %}
-	      	<div class="col-xs-12 col-sm-4">
-	        	<img src="{% static 'img/review1.png' %}"/>
-	        	<p class="text-center">
-	        		{{ review.reviewText }}
-	        	</p>
-	        	<p class="text-center">
-	          		<strong> {{ review.author }}
-	            	</strong>
-	            </p>
-	        	<div class="text-center">
-	          		<span class="glyphicon glyphicon-star">
-	          		<span class="glyphicon glyphicon-star">
-	          		<span class="glyphicon glyphicon-star">
-	          		<span class="glyphicon glyphicon-star">
-	          		<span class="glyphicon glyphicon-star">
-	            </div>
-	        </div>
-	    {% endfor %}
-    </div>
-    <div class="row">
-    	<div id="book-now-div" class="col-xs-12 text-center">
-      		<a class="btn-primary" href="{% url 'book' %}"> 
-      			Book Now      
-      		</a>
-    	</div>
+              	<div class="col-xs-12 col-sm-4 text-center">
+                    <img src="{% static 'img/step1.png' %}" class="img-responsive">
+                    <i class="glyphicon glyphicon-phone icon-howitworks"></i>
+                		<p>Book a cleaning on our website</p>
+              	</div>
+              	<div class="col-xs-12 col-sm-4 text-center">
+                    <img src="{% static 'img/step2.png' %}" class="img-responsive">
+                    <i class="glyphicon glyphicon-menu-right icon-howitworks"></i>
+                		<p>Our professional staff will visit your place and do the cleaning</p>
+              	</div>
+              	<div class="col-xs-12 col-sm-4 text-center">
+                    <img src="{% static 'img/step3.jpg' %}" class="img-responsive">
+                    <i class="glyphicon glyphicon-ok icon-howitworks"></i>
+                		<p>Sit back and enjoy your fresh home.</p>
+              	</div>
+            </div>
+        </div>
+    </section>
+    <hr>
+  	<section>
+        <div class="container">
+            <div class="row">
+              	<h1 class="text-center">What Users Say</h1>
+                      {% for review in reviews %}                          
+                          <div class="col-xs-12 col-sm-4">
+                            <img src="{% static 'img/review1.png' %}"/>
+                            <p class="text-center">
+                                {{ review.reviewText }}
+                            </p>
+                            <p class="text-center">
+                                 <strong>{{ review.author }}</strong>
+                            </p>
+                            <div class="text-center">
+                                <span class="rating">
+                                  {% for i in review.rating|get_range %}
+                                      <i class="glyphicon glyphicon-star"></i>
+                                  {% endfor %}
+                                </span>
+                            </div>
+                          </div>
+                      {% endfor %}
+                  </div>
+                  <a class="carousel-control-prev" href="#ratingCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#ratingCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+                
+          	      	
+          	    
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section class="trust">
+        <div class="container">
+            <div class="row">
+                <h1 class="text-center">Your Trust And Security Are Our Priority</h1>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <h2 class="text-center">Saves You Time</h2>
+                  <p class="text-muted">
+                    Maqr6 helps you live smarter, giving you time to focus on what’s most important.
+                  </p>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <h2 class="text-center">Safety First</h2>
+                  <p class="text-muted">
+                    We rigorously vet all of our Cleaners, who undergo identity checks as well as in-person interviews.
+                  </p>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <h2 class="text-center">Only The Best Quality</h2>
+                  <p class="text-muted">
+                    Our skilled professionals go above and beyond on every job. Cleaners are rated and reviewed after each task.
+                  </p>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <h2 class="text-center">Easy To Get Help</h2>
+                  <p class="text-muted">
+                    We bring our own safe supplies. Let us know of any special requests and we’ll make it happen.
+                  </p>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <h2 class="text-center">Seamless Communication</h2>
+                  <p class="text-muted">
+                    Online communication makes it easy for you to stay in touch with your Cleaners.
+                  </p>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <h2 class="text-center">Fixed Prices</h2>
+                  <p class="text-muted">
+                    After you fill out the booking form you get a fixed quote. No hidden fees or other charges.
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+      	<div id="book-now-div" class="col-xs-12 text-center">
+        		<a class="btn-primary" href="{% url 'book' %}"> 
+        			Book Now      
+        		</a>
+      	</div>
   	</div>
 {% endblock %}
