--- a/main/templates/main/rate.html
+++ b/main/templates/main/rate.html
@@ -1,34 +1,45 @@
 {% extends 'base.html' %}
-{% load widget_tweaks %}
+{% load widget_tweaks static %}
 {% block title %}
 	Maqr6 | Forget about cleaning, enjoy the result!
 {% endblock %}
 
+{% block extra_head %}
+	<link rel="stylesheet" type="text/css" href="{% static 'css/star-rating.min.css' %}">
+{% endblock %}
+
 {% block content %}
-    <form id="addReview1" class="form-horizontal" method="post" action="">
-    	{% csrf_token %}
-		<div class="row">
-			{{ form.non_field_errors }}
-			{% if error == "1" %}
-				<div class="alert alert-danger" role="alert"> 
-					All fields are required, please try again
-				</div>
-			{% endif %}
-			<div class="col-md-6 col-sm-12">
-				{% render_field form.author class="form-control" placeholder="Your name" %}
+	<div class="container">
+	    <form id="addReview1" class="form-horizontal" method="post" action="">
+	    	{% csrf_token %}
+			<div class="row">
+				{{ form.non_field_errors }}
 				
+				<div class="col-md-4 col-md-offset-2 col-sm-12">
+					{% render_field form.author class="form-control" placeholder="Your name" %}
+					
+				</div>
+				<div class="col-md-4  col-sm-12 text-center">
+					<label for="form.rating.id_for_label" class="control-label">Please rate the service</label>
+					{% render_field form.rating class="rating" data-show-clear="false" data-show-caption="false" data-size="md" data-step="1" %}
+				</div>
+			
+				<div class="col-md-6 col-md-offset-3 col-xs-12 top20">
+					<p id="hlp-txt" class="text-muted">
+						{{ form.reviewText.help_text }}
+					</p>
+					{% render_field form.reviewText class="form-control" placeholder="Any feedback?" %}
+				</div>
 			</div>
-			<div class="col-md-6 col-sm-12">
-				{% render_field form.rating class="form-control" %}
+			<div class="row text-center">
+				<div class="col-xs-12 text-center">
+					<button type="submit" class="btn-primary"> Rate Now </button>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				{% render_field form.reviewText class="form-control" placeholder="Any feedback?" %}
-			</div>
-		</div>
-		<div class="row text-center">
-			<button class="btn-primary"> Rate Now </button>
-		</div>
-	</form>
+		</form>
+	</div>
 {% endblock content %}
+
+{% block extra_js %}
+	<script src="{% static 'js/star-rating.min.js' %}"></script>
+{% endblock %}
