--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<meta name='viewport', content='width=device-width, initial-scale=1.0'>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 	<script src="{% static 'js/jquery-3.2.0.min.js' %}"></script>
 	{% block extra_head %}{% endblock %}
 	<title>{% block title %}{% endblock %}</title>
@@ -35,19 +35,20 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<div class="container">	
-		<div id="header" class="page-header">
-	        <div class="row">
-	        	<div class="col-lg-6">
-	            	<h1>{{ pageHeader.title }}
-	            		<small> 
-	          	  			&nbsp;	{{ pageHeader.strapline }}
-	            		</small>
-	            	</h1>
-	        	</div>
-	      	</div>
-	    </div>
-    
+	
+		{% block header %}
+			<div id="header" class="page-header">
+		        <div class="row">
+		        	<div class="col-lg-6">
+		            	<h1>{{ pageHeader.title }}
+		            		<small> 
+		          	  			&nbsp;	{{ pageHeader.strapline }}
+		            		</small>
+		            	</h1>
+		        	</div>
+		      	</div>
+		    </div>
+    	{% endblock %}
     	{% if messages %}
     		{% for message in messages %}
 		    	<div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %} alert-dismissable" role="alert">
@@ -58,7 +59,7 @@
 		    	</div>
 		    {% endfor %}
 		{% endif %}
-	</div>
+	
 
 	{% block content %}{% endblock %}
 
