--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,12 +4,24 @@
 	Maqr6 | Forget about cleaning, enjoy the result!
 {% endblock %}
 
+{% block extra_head %}
+  <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+{% endblock %}
+
+{% block header %}{% endblock %}
 
 {% block content %}    
+    <div id="header-img">
+      <div class="header-txt">
+        <h1>Cleaning Services in Yerevan</h1>
+        <h2>{{ pageHeader.strapline }}</h2>
+        <a class="btn btn-primary btn-lg" href="{% url 'book' %}">Book Now</a>
+      </div>
+    </div>
     <section>
         <div class="container">
             <div class="row">
-          	    <h1 class="text-center">How It Works</h1>
+          	    <h2 class="text-center">How It Works</h2>
 
               	<div class="col-xs-12 col-sm-4 text-center">
                     <img src="{% static 'img/step1.png' %}" class="img-responsive">
@@ -33,7 +45,7 @@
   	<section>
         <div class="container">
             <div class="row">
-              	<h1 class="text-center">What Users Say</h1>
+              	<h2 class="text-center">What Users Say</h2>
                       {% for review in reviews %}                          
                           <div class="col-xs-12 col-sm-4">
                             <img src="{% static 'img/review1.png' %}"/>
@@ -68,55 +80,65 @@
             </div>
         </div>
     </section>
-    <hr>
     <section class="trust">
         <div class="container">
+            <h2 class="text-center">Your Trust And Security Are Our Priority</h2>
             <div class="row">
-                <h1 class="text-center">Your Trust And Security Are Our Priority</h1>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2 class="text-center">Saves You Time</h2>
+                  <p class="text-center"><i class="fa fa-hourglass-o fa-2x" aria-hidden="true"></i></p>
+                  <h3 class="text-center">Saves You Time</h3>
                   <p class="text-muted">
                     Maqr6 helps you live smarter, giving you time to focus on what’s most important.
                   </p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2 class="text-center">Safety First</h2>
+                  <p class="text-center"><i class="fa fa-shield fa-2x" aria-hidden="true"></i></p>
+                  <h3 class="text-center">Safety First</h3>
                   <p class="text-muted">
                     We rigorously vet all of our Cleaners, who undergo identity checks as well as in-person interviews.
                   </p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2 class="text-center">Only The Best Quality</h2>
+                  <p class="text-center"><i class="fa fa-certificate fa-2x" aria-hidden="true"></i></p>
+                  <h3 class="text-center">Only The Best Quality</h3>
                   <p class="text-muted">
-                    Our skilled professionals go above and beyond on every job. Cleaners are rated and reviewed after each task.
+                    Our skilled professionals go above and beyond on every job. Cleaners are rated and reviewed after each task. Only 5 star Cleaners are kept.
                   </p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2 class="text-center">Easy To Get Help</h2>
+                  <p class="text-center"><i class="fa fa-check fa-2x" aria-hidden="true"></i></p>
+                  <h3 class="text-center">Easy To Get Help</h3>
                   <p class="text-muted">
                     We bring our own safe supplies. Let us know of any special requests and we’ll make it happen.
                   </p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2 class="text-center">Seamless Communication</h2>
+                  <p class="text-center"><i class="fa fa-comments fa-2x" aria-hidden="true"></i></p>
+                  <h3 class="text-center">Seamless Communication</h3>
                   <p class="text-muted">
                     Online communication makes it easy for you to stay in touch with your Cleaners.
                   </p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2 class="text-center">Fixed Prices</h2>
+                  <p class="text-center"><i class="fa fa-balance-scale fa-2x" aria-hidden="true"></i></p>
+                  <h3 class="text-center">Fixed Prices</h3>
                   <p class="text-muted">
-                    After you fill out the booking form you get a fixed quote. No hidden fees or other charges.
+                    You get a fixed quote when you book. That's what you pay - no hidden fees or other unexpected charges.
                   </p>
                 </div>
             </div>
         </div>
     </section>
-    <div class="container">
-      	<div id="book-now-div" class="col-xs-12 text-center">
-        		<a class="btn-primary" href="{% url 'book' %}"> 
-        			Book Now      
-        		</a>
+    <section class="book-appointment">
+        <div class="container">
+            <div class="col-xs-12 text-center">
+                <h1>Book a house cleaning in 60 seconds!</h1>
+            </div>
+          	<div class="col-xs-12 text-center top20">                
+            		<a class="btn btn-info btn-lg" href="{% url 'book' %}"> 
+            			Book Appointment     
+            		</a>
+          	</div>
       	</div>
-  	</div>
+    </section>
 {% endblock %}
