--- a/main/templates/main/rate.html
+++ b/main/templates/main/rate.html
@@ -32,8 +32,8 @@
 				</div>
 			</div>
 			<div class="row text-center">
-				<div class="col-xs-12 text-center">
-					<button type="submit" class="btn-primary"> Rate Now </button>
+				<div class="col-xs-12 text-center top20">
+					<button type="submit" class="btn btn-primary"> Rate Now </button>
 				</div>
 			</div>
 		</form>
