--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,7 +11,7 @@
 {% block header %}{% endblock %}
 
 {% block content %}    
-    <div id="header-img">
+    <div class="header-img subheader">
       <div class="header-txt">
         <h1>Cleaning Services in Yerevan</h1>
         <h2>{{ pageHeader.strapline }}</h2>
