--- a/main/templates/main/book.html
+++ b/main/templates/main/book.html
@@ -73,6 +73,7 @@
 								<div class="select-side2">
 								    <i class="glyphicon glyphicon-menu-down blue"></i>
 								</div>
+								
 								{% render_field  form.bedroomNumber class="form-control top20" %}
 						</div>
 						<div class="col-md-6 col-sm-12 text-center modify-select">
@@ -130,7 +131,7 @@
 				<h3 class="text-center">You will pay: {% render_field form.cost readonly="readonly" %} AMD</h3>
 			</div>
 			<div class="col-xs-12 text-center">
-				<button type="submit" class="btn-primary"> Book Now</button>
+				<button type="submit" class="btn btn-primary"> Book Now</button>
 			</div>
 		</form>
 	</div>
