--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -46,15 +46,17 @@
         <div class="container">
             <div class="row">
               	<h2 class="text-center">What Users Say</h2>
-                      {% for review in reviews %}                          
-                          <div class="col-xs-12 col-sm-4">
-                            <img src="{% static 'img/review1.png' %}"/>
+                  {% for review in reviews %}                          
+                      <div class="col-xs-12 col-sm-4">
+                        <div class="transp-bg">
+                            <p class="text-center">         
+                              <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+                              <strong>{{ review.author }}</strong>  
+                            </p>
                             <p class="text-center">
                                 {{ review.reviewText }}
                             </p>
-                            <p class="text-center">
-                                 <strong>{{ review.author }}</strong>
-                            </p>
+                          
                             <div class="text-center">
                                 <span class="rating">
                                   {% for i in review.rating|get_range %}
@@ -62,25 +64,13 @@
                                   {% endfor %}
                                 </span>
                             </div>
-                          </div>
-                      {% endfor %}
-                  </div>
-                  <a class="carousel-control-prev" href="#ratingCarousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#ratingCarousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </div>
-                
-          	      	
-          	    
-            </div>
+                        </div>
+                      </div>
+                  {% endfor %}
+            </div>     
         </div>
     </section>
-    <section class="trust">
+    <section class="trust top20">
         <div class="container">
             <h2 class="text-center">Your Trust And Security Are Our Priority</h2>
             <div class="row">
@@ -128,6 +118,9 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="orange-bg">
+      
     </section>
     <section class="book-appointment">
         <div class="container">
