--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -173,3 +173,14 @@ span.required:before { content: '*'; }
   background-color: rgba(200, 200, 225, 0.19);
   padding: 15px;
 }
+
+.orange-bg{
+  background-color: #ff684c;
+}
+
+@media (min-width: 750px) {
+  .child {
+      padding-top: 50%;
+  }
+
+}
