--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -120,7 +120,20 @@
         </div>
     </section>
     <section class="orange-bg">
-      
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 col-xs-12">
+              <img src="{% static 'img/big-phone.png' %}">    
+            </div>
+            <div class="col-sm-6 col-xs-12">
+              <div class="child">
+                <h1>You can book from your IOS or Android mobile phone</h1>
+                <h2>as easily as from PC or Mac</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+          
     </section>
     <section class="book-appointment">
         <div class="container">
