change input type to tel for phone to fix problem in mobile input

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -126,7 +126,7 @@
               <img src="{% static 'img/big-phone.png' %}">    
             </div>
             <div class="col-sm-6 col-xs-12">
-              <div class="child">
+              <div class="child white">
                 <h1>You can book from your IOS or Android mobile phone</h1>
                 <h2>as easily as from PC or Mac</h2>
               </div>
