--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -174,6 +174,10 @@ span.required:before { content: '*'; }
   padding: 15px;
 }
 
+.white{
+  color: #fff;
+}
+
 .orange-bg{
   background-color: #ff684c;
 }
