--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -12,7 +12,7 @@
 
 {% block content %}    
     <div class="header-img subheader">
-      <div class="header-txt">
+      <div class="header-txt white">
         <h1>Cleaning Services in Yerevan</h1>
         <h2>{{ pageHeader.strapline }}</h2>
         <a class="btn btn-primary btn-lg" href="{% url 'book' %}">Book Now</a>
