--- a/main/templates/main/rate.html
+++ b/main/templates/main/rate.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load widget_tweaks static %}
+{% load widget_tweaks static i18n %}
 {% block title %}
 	Maqr6 | Forget about cleaning, enjoy the result!
 {% endblock %}
@@ -16,11 +16,12 @@
 				{{ form.non_field_errors }}
 				
 				<div class="col-md-4 col-md-offset-2 col-sm-12">
-					{% render_field form.author class="form-control" placeholder="Your name" %}
-					
+					{% with ph=form.author.label %}	
+						{% render_field form.author class="form-control" placeholder=ph %}
+					{% endwith %}
 				</div>
 				<div class="col-md-4  col-sm-12 text-center">
-					<label for="form.rating.id_for_label" class="control-label">Please rate the service</label>
+					<label for="form.rating.id_for_label" class="control-label">{{ form.rating.help_text }}</label>
 					{% render_field form.rating class="rating" data-show-clear="false" data-show-caption="false" data-size="md" data-step="1" %}
 				</div>
 			
@@ -28,12 +29,14 @@
 					<p id="hlp-txt" class="text-muted">
 						{{ form.reviewText.help_text }}
 					</p>
-					{% render_field form.reviewText class="form-control" placeholder="Any feedback?" %}
+					{% with ph=form.reviewText.label %}	
+						{% render_field form.reviewText class="form-control" placeholder=ph %}
+					{% endwith %}
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col-xs-12 text-center top20">
-					<button type="submit" class="btn btn-primary"> Rate Now </button>
+					<button type="submit" class="btn btn-primary">{% trans 'Rate Now' %}</button>
 				</div>
 			</div>
 		</form>
