--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -113,7 +113,7 @@
                   <p class="text-center"><i class="fa fa-balance-scale fa-2x" aria-hidden="true"></i></p>
                   <h3 class="text-center">{% trans 'Fixed Prices' %}</h3>
                   <p class="text-muted">
-                    {% trans 'You get a fixed quote when you book. That\'s what you pay - no hidden fees or other unexpected charges.' %}
+                    {% trans 'You get a fixed quote when you book. That is what you pay - no hidden fees or other unexpected charges.' %}
                   </p>
                 </div>
             </div>
